This file contains a list of new features and capabilities by TMDA
version.  These blurbs are what are usually included in release
announcements under "What's new?".  Make sure to read the UPGRADE
file in this directory as well.

======================================================================

TMDA 1.1.10 "Killyloch" --

* tmda-ofmipd has a new option courtesy of Robert P. Thille.  `-L'
  turns on logging prints which logs everything that `-d' logs, except
  for the raw SMTP protocol data. Hence, it is useful if you want to
  leave logging enabled permanently, but don't want your logs bloated
  with AUTH data and/or the content of large attachments.

======================================================================

TMDA 1.1.9 "Jura" --

* New feature courtesy of Mark Horn. ACTION_EXPIRED_DATED has been
  extended to support handling multiple ages of dated messages. So you
  could for example 'bounce' mail to dated addresses that have been
  expired for more than a week, 'hold' if longer than a month, and
  'drop' if over a year, while still setting the default behavior to
  'confirm'.  For more information and an illustrative example, see
  http://wiki.tmda.net/ConfigurationVariables#ACTION_EXPIRED_DATED

======================================================================

TMDA 1.1.8 "Imperial" --

* TMDA's internal copy of the Python email package has been upgraded
  to v4.0.1.

* The bin/tmda-* programs have been revamped to use Python's new
  'optparse' library.

======================================================================

TMDA 1.1.7 "Hazelburn" --

* TMDA can now optionally store unconfirmed messages in a "Maildir"
  rather than in TMDA's custom pending queue format.  This allows you
  to use any mail reading program that supports Maildir to browse or
  search your pending queue, rather than the 'tmda-pending' and
  'tmda-cgi' programs, though the latter will still work.
