@@ -1,3 +1,9 @@
+2006-12-07  Jason R. Mastaler  <jason@mastaler.com>
+
+	* Pending.py (Message.release): Add the IP address and browser
+	info of the releaser to an 'X-TMDA-CGI' header if the message was
+	released via tmda-cgi.
+	
 2006-10-27  Mark Horn  <mark@hornclan.com>
 
 	* Defaults.py: added additional description to
